<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity4">

    <RadioGroup
        android:id="@+id/themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Theme"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/darkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode" />

        <RadioButton
            android:id="@+id/lightmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_mode" />
    </RadioGroup>

    <TextView
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/allow_push_notification" />

    <TextView
        android:id="@+id/profileDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profile_details"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:hint="@string/emailaddress"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:hint="@string/nickname"
        android:inputType="textEmailAddress"
        android:maxWidth="10dp"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/save"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/save" />
</LinearLayout>




